[package]
name = "egui-overlay"
version = "0.1.0"
authors = ["Yannic Nuwenhof <ynuwenhof@pm.me>"]
edition = "2021"
description = "Proof of concept external egui overlay"
readme = "README.md"
license = "MIT"

[dependencies]
eframe = "0.16.0"

[dependencies.clap]
version = "3.0.13"
features = ["derive"]

[dependencies.windows]
version = "0.30.0"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"]
