[package]
name = "egui-overlay"
version = "0.1.0"
authors = ["Yannic Nuwenhof <ynuwenhof@pm.me>"]
edition = "2021"
description = "Proof of concept external egui overlay"
readme = "README.md"
license = "MIT"

[dependencies]
egui = "0.16.1"
glium = "0.31.0"
anyhow = "1.0.53"
egui_glium = "0.16.0"
raw-window-handle = "0.4.2"

[dependencies.windows]
version = "0.30.0"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"]
